fix float overflow

--- a/wp-content/themes/matheus/assets/scss/style.scss
+++ b/wp-content/themes/matheus/assets/scss/style.scss
@@ -487,7 +487,7 @@ main {
     position: relative;
     padding: 35% 0 20% 0;
     ul {
-      overflow: auto;
+      overflow: hidden;
     }
   }
   > .slides {
